--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pake-cli",
-  "version": "2.3.2",
+  "name": "pake-cli-kevin",
+  "version": "2.3.3",
   "description": "🤱🏻 Turn any webpage into a desktop app with Rust. 🤱🏻 利用 Rust 轻松构建轻量级多端桌面应用。",
   "engines": {
     "node": ">=16.0.0"
@@ -71,6 +71,7 @@
     "@rollup/plugin-terser": "^0.1.0",
     "@types/fs-extra": "^9.0.13",
     "@types/is-url": "^1.2.30",
+    "@types/node": "^20.5.7",
     "@types/page-icon": "^0.3.4",
     "@types/prompts": "^2.4.1",
     "@types/psl": "^1.1.0",
