feat: add single-process multi-window mode
Add a new multi-window option so relaunching an existing app can open additional windows in the same process, with tray/menu support and config wiring. Also prevent sharp from forcing source builds when Homebrew libvips is installed to keep local pnpm installs reliable.

--- a/.npmrc
+++ b/.npmrc
@@ -4,3 +4,6 @@ audit=false
 
 # Resolve sharp version conflicts
 prefer-dedupe=true
+
+# Avoid forcing sharp source builds when Homebrew libvips is present
+sharp_ignore_global_libvips=true
